--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,13 +6,13 @@
 <body>
 <h1>O que deseja realizar?</h1>
 <ul>
-  <li><a href="login.html">Login</a></li>
-  <li><a href="register.html">Registar</a></li>
-  <li><a href="logout.html">Logout</a></li>
-  <li><a href="indexar.html">Indexar novo URL</a></li>
-  <li><a href="pesquisa_termos.html">Realizar pesquisa de termos</a></li>
-  <li><a href="pesquisa_urls.html">Realizar pesquisa de urls</a></li>
-  <li><a href="informacoes_gerais.html">Consultar informacoes gerais do sistema</a></li>
+  <li><a href="login">Login</a></li>
+  <li><a href="register">Registar</a></li>
+  <li><a href="logout">Logout</a></li>
+  <li><a href="indexar_url">Indexar novo URL</a></li>
+  <li><a href="pesquisa_termos">Realizar pesquisa de termos</a></li>
+  <li><a href="pesquisa_urls">Realizar pesquisa de urls</a></li>
+  <li><a href="informacoes_gerais">Consultar informacoes gerais do sistema</a></li>
 </ul>
 </body>
 </html>
