--- a/src/main/resources/templates/indexar.html
+++ b/src/main/resources/templates/indexar.html
@@ -1,15 +1,9 @@
-<form th:action="@{/indexed}" th:object="${url}" method="post">
+<form th:action="@{/indexado}" th:object="${Url}" method="post">
     <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
     <div>
-        <label>Username
-            <input type="text" th:field="*{username}" required>
+        <label>URL
+            <input type="text" th:field="*{url}" required>
         </label>
     </div>
-    <div>
-        <label>Password
-            <input type="password" th:field="*{password}" required>
-        </label>
-
-    </div>
-    <button type="submit">Login</button>
+    <button type="submit">Indexar</button>
 </form>
