--- a/src/main/resources/templates/pesquisa_termos.html
+++ b/src/main/resources/templates/pesquisa_termos.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>Dynamic Form Input Example</title>
+  <title>Pesquisa por termos</title>
 </head>
-
-<form th:action="@{/termos_pesquisados}" th:object="${Termos}" method="post">
 <body>
-<h1>Dynamic Form Input Example</h1>
-<script>
-  var numInputs = prompt("Quantos termos deseja pesquisar?");
-  var formHTML = "";
-  for (var i = 0; i < numInputs; i++) {
-    formHTML += "<label for='input" + i + "'>Termo " + (i+1) + ":</label><br>";
-    formHTML += "<input type='text' th:field='*{termos[i]}' id='input" + i + "' name='input" + i + "'><br>";
-  }
-  formHTML += "<input type='submit' value='Submit'>";
-  document.write(formHTML);
-
-</script>
-</body>
+<h1>Pesquisa por termos</h1>
+<form th:action="@{/termos_pesquisados}" th:object="${Termos}" method="post">
+  <script>
+    var numInputs = prompt("Quantos termos deseja pesquisar?");
+    var formHTML = "";
+    for (var i = 0; i < numInputs; i++) {
+      formHTML += "<label for='input" + i + "'>Termo " + (i+1) + ":</label><br>";
+      formHTML += "<input type='text' th:field='*{Termos[" + i + "]}' required id='input" + i + "' name='termos[" + i + "]'><br>";
+    }
+    formHTML += "<div> Indexar Urls <input type='checkbox' id='indexUrlsCheckbox' name='checked' value='true'> </div>";
+    formHTML += "<input type='submit' value='Submit'>";
+    document.write(formHTML);
+  </script>
 </form>
+</body>
 </html>
