--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,10 @@
-<form th:action="@{/success_login}" th:object="${user}" method="post">
+<form th:action="@{/check_login}" th:object="${user}" method="post">
+  <head>
+    <!-- Add necessary CSS and JavaScript libraries -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </head>
   <div>
     <label>Username   </label>
     <input type="text" th:field="*{username}" required>
@@ -9,4 +15,27 @@
 
   </div>
   <button type="submit">Login</button>
+
+  <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="errorModalLabel">Error</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- Error message will be inserted here -->
+          <p th:text="${errorMessage}"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script th:if="${errorMessage}">
+    $(document).ready(function() {
+      $('#errorModal').modal('show');
+    });
+  </script>
 </form>
