--- a/src/main/resources/templates/pesquisa_url.html
+++ b/src/main/resources/templates/pesquisa_url.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<form th:action="@{/check_pesquisa}" th:object="${url}" method="post">
+<form th:action="@{/resultados}" th:object="${url}" method="post">
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
