--- a/src/main/resources/templates/pesquisa_url.html
+++ b/src/main/resources/templates/pesquisa_url.html
@@ -19,7 +19,8 @@
     <br>
     <button type="submit">pesquisar</button>
     </body>
-    <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+    <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -37,7 +38,7 @@
     </div>
 
     <script th:if="${errorMessage}">
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('#errorModal').modal('show');
         });
     </script>
