--- a/src/main/resources/templates/indexar.html
+++ b/src/main/resources/templates/indexar.html
@@ -19,6 +19,9 @@
     <br>
     <button type="submit">Indexar</button>
     </body>
+    <br>
+    <a href="home">Voltar para o menu principal</a>
+
     <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
          aria-hidden="true">
         <div class="modal-dialog" role="document">
