--- a/src/main/resources/templates/pesquisa_url.html
+++ b/src/main/resources/templates/pesquisa_url.html
@@ -13,11 +13,14 @@
     <h1>Pesquisa por url</h1>
     <br>
     <div>
-        <label>Url</label>
+        <label>Url:</label>
+
         <input type="text" th:field="*{url}" required>
     </div>
     <br>
     <button type="submit">pesquisar</button>
+    <br>
+    <a href="home">Voltar para o menu principal</a>
     </body>
     <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
          aria-hidden="true">
