--- a/src/main/resources/templates/resultados_termos.html
+++ b/src/main/resources/templates/resultados_termos.html
@@ -12,5 +12,6 @@
             th:text="${termos.results[value]}"></li>
     </ul>
 </div>
+<a href="home">Voltar para o menu principal</a>
 </body>
 </html>
