--- a/src/main/resources/templates/resultados.html
+++ b/src/main/resources/templates/resultados.html
@@ -13,5 +13,6 @@
             th:text="${url.results[value]}"></li>
     </ul>
 </div>
+<a href="home">Voltar para o menu principal</a>
 </body>
 </html>
