--- a/src/main/resources/templates/websocket1.html
+++ b/src/main/resources/templates/websocket1.html
@@ -22,27 +22,11 @@
         </div>
       </form>
     </div>
-    <div class="col-md-6">
-      <form class="form-inline">
-        <div class="form-group">
-          <label for="message">Message:</label>
-          <input type="text" id="message" class="form-control" placeholder="Write a message here...">
-        </div>
-        <button id="send" class="btn btn-default" type="submit">Send</button>
-      </form>
-    </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <table id="conversation" class="table table-striped">
-        <thead>
-        <tr>
-          <th>Messages</th>
-        </tr>
-        </thead>
-        <tbody id="messages">
-        </tbody>
-      </table>
+      <h1>Informação do Sistema</h1>
+      <p id="messages"></p>
     </div>
   </div>
 </div>
