--- a/src/main/resources/templates/index_user_stories.html
+++ b/src/main/resources/templates/index_user_stories.html
@@ -8,5 +8,7 @@
   </div>
   <br>
   <button type="submit">Indexar stories</button>
+  <br>
+  <a href="home">Voltar para o menu principal</a>
 
 </form>
